Add openapi/swagger for the api and refactor.
Add dependecies for swagger.
Add plugin and configure it for code generation.
Add command on frontend to generate client api.

Add controller classes for serving the Api.
Add needed services.
Add Swagger configuration class

Delete old DTOs and controller.
