# backend/src/main/resources/openapi.yml
@@ -1,4 +1,4 @@
-openapi: 3.0.0
+openapi: 3.0.2
 info:
   title: ROLingvistica API
   description: This is a public API used for the Romanian linguistics website
@@ -9,6 +9,10 @@ servers:
 tags:
   - name: problem
     description: Operations related to problems
+  - name: requirement
+    description: Operations related to requirements
+  - name: answers
+    description: Operations related to answers
 
 paths:
   /problem:
@@ -27,32 +31,128 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/ContestProblemsDTO'
+  /problem/old:
+    get:
+      tags:
+        - "problem"
+      operationId: getAll
+      summary: get all problems
+      responses:
+        '200':
+          description: A list containing all problems
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/ProblemDTO'
+  /requirement/{problemId}:
+    get:
+      tags:
+        - "requirement"
+      operationId: getRequirementsByProblemId
+      summary: fetch a list of requirements assigned to a problem
+      parameters:
+        - in: path
+          name: problemId
+          schema:
+            type: integer
+            format: int64
+          required: true
+          description: The Id of the problem for which to return the list of requirements
+      responses:
+        '200':
+          description: list of requirements
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/RequirementDTO'
+  /answer/{requirementId}:
+    get:
+      tags:
+        - "answer"
+      operationId: getAnswersByRequirementId
+      summary: Fetch a list of answers of a requirement
+      parameters:
+        - in: path
+          name: requirementId
+          schema:
+            type: integer
+            format: int64
+          required: true
+          description: The ID of the requirement to which the answers were given
+      responses:
+        '200':
+          description: List of answers
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/AnswerDTO'
+
 
 components:
   schemas:
     ProblemDTO:
       properties:
         id:
-          type: number
+          type: integer
+          format: int64
         name:
           type: string
-        contest_name:
+        contestName:
           type: string
-        section_name:
-          type: string
-    SectionProblemsDTO:
-      properties:
         sectionName:
           type: string
+      required:
+        - name
+    SectionProblemsDTO:
+      properties:
+        name:
+          type: string
+          description: the name of the section
         children:
           type: array
           items:
             $ref: '#/components/schemas/ProblemDTO'
+          description: a list of problems for this section
+      required:
+        - name
     ContestProblemsDTO:
       properties:
-        contestName:
+        name:
           type: string
+          description: the name of the contest
         children:
           type: array
           items:
             $ref: '#/components/schemas/SectionProblemsDTO'
+          description: a list of sections contained in this contest. The sections contain a list of problems corresponding to this contest and the corresponding section
+      required:
+        - name
+    RequirementDTO:
+      properties:
+        id:
+          type: integer
+          format: int64
+        specification:
+          type: string
+          description: Explanation of what was asked for this requirement
+        correctAnswer:
+          type: string
+          description: The correct answer expected for this requirement.
+    AnswerDTO:
+      properties:
+        id:
+          type: integer
+          format: int64
+        requirementId:
+          type: integer
+          format: int64
+          description: The Id of the requirement this answer was given to
+        providedAnswer:
+          type: string
+          description: The answer provided by the contestant for the requirement
